2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* symtab.c (symtab_nonoverwritable_alias): Copy READONLY flag for variables.

2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-visibility.c (can_replace_by_local_alias_in_vtable): New function.
	(update_vtable_references): New function.
	(function_and_variable_visibility): Rewrite also vtable initializers.
	* varpool.c (cgraph_variable_initializer_availability): Remove assert.

2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* ggc.h (ggc_grow): New function.
	* ggc-none.c (ggc_grow): New function.
	* ggc-page.c (ggc_grow): Likewise.

2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (cgraph_non_local_node_p_1, cgraph_local_node_p, address_taken_from_non_vtable_p,
	comdat_can_be_unshared_p_1, comdat_can_be_unshared_p, cgraph_externally_visible_p,
	varpool_externally_visible_p, can_replace_by_local_alias,
	update_visibility_by_resolution_info, function_and_variable_visibility,
	pass_data_ipa_function_and_variable_visibility,
	make_pass_ipa_function_and_variable_visibility,
	whole_program_function_and_variable_visibility,
	pass_data_ipa_whole_program_visibility,
	make_pass_ipa_whole_program_visibility): Move to ipa-visibility.c
	* cgraph.h (cgraph_local_node_p): Declare.
	* ipa-visibility.c: New file.
	* Makefile.in (OBJS): Add ipa-visiblity.o

2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* gimple-fold.c (can_refer_decl_in_current_unit_p): Be sure
	that var decl is available.

2014-05-23  Jan Hubicka  <hubicka@ucw.cz>

	* tree-core.h (tree_decl_with_vis): Replace comdat_group by
	symtab_node pointer.
	* tree.c (copy_node_stat): Be sure tonot copy
	symtab_node pointer.
	(find_decls_types_r): Do not walk COMDAT_GROUP.
	* tree.h (DECL_COMDAT_GROUP): Revamp to use decl_comdat_group.
	* varasm.c (make_decl_one_only): Use set_comdat_group;
	create node if needed.
	* ipa-inline-transform.c (save_inline_function_body): Update
	way we decl->symtab mapping.
	* symtab.c (symtab_hash, hash_node, eq_node